# ftree

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  IDEAS.md  PLAN.md  README.md  ftree-default.css  simpsons-test.html
docs/: ARCHITECTURE.md  GEDCOM.md  LIBRARIES.md  PLAN.md
samples/: test_details.ged
src/: __init__.py  cli.py  family_formatter.py  html_renderer.py  lib.rs  main.rs  models.py  parser.py  renderer.py
src/lint/: mod.rs
src/model/: family.rs  individual.rs  mod.rs  tree.rs  types.rs
src/parse/: mod.rs
src/parse/gedcom/: builder.rs  encoding.rs  lexer.rs  mod.rs
src/render/: ascii.rs  csv.rs  html.rs  list.rs  markdown.rs  mod.rs  svg.rs
test/: __init__.py  test_html_output.py  test_html_renderer.py
tests/: integration.rs
